fix: improve Dark Mode styling for icons barely visible in dark

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -204,6 +204,5 @@ $slick-pagination-page-input-border-radius:                   3px !default;
   --slick-highlight-color:                  #0389ff;
   --slick-pagination-icon-color:            #1190ff;
   --slick-row-mouse-hover-box-shadow:       0 0 0 2px #3a3a3a;
-  --slick-checkbox-selector-opacity:        1;
-  --slick-checkbox-selector-icon-border:    1px solid #838383;
+  --slick-checkbox-selector-icon-border:    1px solid #888888;
 }
